Updated qsar from B20090407 to B20090409 for beta4 release.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9729 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.ui/plugin.xml
+++ b/plugins/net.bioclipse.qsar.ui/plugin.xml
@@ -9,7 +9,7 @@
             default="true"
             filenames="qsar.xml"
             icon="icons/descriptor.png"
-            contributorClass="org.eclipse.emf.edit.ui.action.EditingDomainActionBarContributor"
+            contributorClass="net.bioclipse.qsar.ui.editors.QsarActionBarContributor"
             class="net.bioclipse.qsar.ui.editors.QsarEditor"
             id="net.bioclipse.qsar.ui.editor2.QsarEditor">
       </editor>
