Made bibtexml parser operate on xml by default.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@9737 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.bibtexml/plugin.xml
+++ b/plugins/net.bioclipse.bibtexml/plugin.xml
@@ -19,7 +19,7 @@
 
    <extension point="org.eclipse.emf.ecore.extension_parser">
       <parser
-            type="bibtexml"
+            type="xml"
             class="net.sf.bibtexml.util.BibtexmlResourceFactoryImpl"/>
    </extension>
 
