Renamed EP to responeUnit, implemented a ResponseUnit class, added ResponseUnit to DescriptorModel, refactored EP reading from QSARManager to QSARHelper, added reading of reponseUnits from EP and made accessor methods from QsarManager.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@10504 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar/plugin.xml
+++ b/plugins/net.bioclipse.qsar/plugin.xml
@@ -19,7 +19,7 @@
 <plugin>
 
    <extension-point id="descriptorProvider" name="descriptorProvider" schema="schema/descriptorProvider.exsd"/>
-   <extension-point id="qsarUnit" name="QsarUnit" schema="schema/qsarUnit.exsd"/>
+   <extension-point id="responseUnit" name="ResponseUnit" schema="schema/qsarUnit.exsd"/>
 
    <extension
          point="net.bioclipse.scripting.contribution">
@@ -37,7 +37,7 @@
       </initializer>
    </extension>
    <extension
-         point="net.bioclipse.qsar.qsarUnit">
+         point="net.bioclipse.qsar.responseUnit">
          <responseUnit
                id="ic50"
                name="Half maximal inhibitory concentration (IC50)"
