--- a/plugins/net.bioclipse.qsar.test/.settings/org.eclipse.jdt.core.prefs
+++ b/plugins/net.bioclipse.qsar.test/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,6 @@
-#Tue Aug 19 17:37:30 CEST 2008
+#Mon May 18 09:32:54 CEST 2009
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
