Set version to 2.0.0.RC1 for release candidate 1.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@10922 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.ui/plugin.xml
+++ b/plugins/net.bioclipse.qsar.ui/plugin.xml
@@ -118,5 +118,12 @@
       </wizard>
    </extension>
 
+	<extension
+      point="org.eclipse.birt.report.viewer.appcontext">
+      	<appcontext
+            class="net.bioclipse.qsar.ui.birt.QSARAppContext">
+      	</appcontext>
+	 </extension>
+
 
 </plugin>
