--- a/plugins/net.bioclipse.bibtexml/.settings/org.eclipse.jdt.core.prefs
+++ b/plugins/net.bioclipse.bibtexml/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,6 @@
-#Thu Mar 19 20:31:29 CET 2009
+#Mon May 18 09:32:49 CEST 2009
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
