Moved QSAR script cheatsheet from cdkws plugin to qsar plugin.
git-svn-id: https://bioclipse.svn.sourceforge.net/svnroot/bioclipse/bioclipse2/trunk@11439 fcb5ba71-d80d-0410-8237-ba3920747fcc

--- a/plugins/net.bioclipse.qsar.ui/build.properties
+++ b/plugins/net.bioclipse.qsar.ui/build.properties
@@ -16,4 +16,6 @@ bin.includes = plugin.xml,\
                icons/,\
                about.ini,\
                about.mappings,\
-               about.properties
+               about.properties,\
+               cheatsheets/,\
+               data/
